# Auth_Django_CRUD

./: .gitignore  COMMENTS.md  INSTRUCTIONS.md  Makefile  README.md  api.spec.yaml  dev.env  docker-compose.yml  manage.py  pyproject.toml  sonar-project.properties
api/: urls.py
api/application/: services.py
api/application/domain/: entities.py  serializers.py
api/infrastructure/: admin.py  models.py  views.py
api/management/commands/: createsocialapp.py
api/migrations/: 0001_initial.py  0002_alter_customuser_is_active_alter_customuser_is_staff.py
app/: asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile
tests/application/: test_services.py
tests/application/domain/: factories.py
tests/infrastructure/: test_models.py  test_views.py
